remove dependency on sun.misc.base64 stuff
git-svn-id: http://svn.vuze.com/public/client@20746 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2